Chapter 2 — Listing 2.5: MethodReferences.java Demonstrates: method references as concise alternatives to single-method lambdas